# code-weather

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/analysis/: collector.rs  complexity.rs  documentation.rs  mod.rs  structure.rs  tests.rs
src/cli/: args.rs  mod.rs
src/config/: mod.rs  schema.rs
src/git/: churn.rs  history.rs  mod.rs
src/history/: mod.rs  storage.rs  trend.rs
src/languages/: detector.rs  mod.rs
src/output/: json.rs  markdown.rs  mod.rs  terminal.rs
src/weather/: conditions.rs  humidity.rs  mapper.rs  mod.rs  temperature.rs  visibility.rs  wind.rs
tests/: integration_tests.rs
