[package]
name = "code-weather"
version = "0.1.0"
edition = "2021"
authors = ["Katie"]
description = "Code quality metrics as weather forecasts"
license = "MIT"
repository = "https://github.com/sudokatie/code-weather"
keywords = ["code-quality", "metrics", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
git2 = "0.18"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"
crossterm = "0.27"
thiserror = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
ignore = "0.4"
indicatif = "0.17"
dirs = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
